Add instruction to send request

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Dream Broker Programming Assignment</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>Programming Assignment</h1>
+  <p>Send POST request to /analyze</p>
+  <p>with Content-Type: <code>"application/json"</code></p>
+  <p>and body: <code>{ text : "your text here"}</code></p>
 </body>
 
 </html>
